--- a/week3/style.css
+++ b/week3/style.css
@@ -1,4 +1,5 @@
-/*css*/
+/* Rheaa's website is called wwww.raoreports.com 
+*/
 body {
 	background: yellow;
 	border-color: black;
@@ -9,12 +10,36 @@ h1 {
 	font-family: Arial;
 	font-size: 24px;
 	text-align: center;
+	margin-top: 0;
+	margin-bottom: 10px;
 }
 
-p {
-	color: FF8D48;
+p:first-letter {
+	color: purple;
+	font-size: 18px;
+}
+
+p:first-line {
+	color: white;
 }
 
 hr {
 	color: black;
 }
+
+h1:hover {
+color:purple;
+}
+
+#content {
+	max-width: 700px;
+	border-width: 2px;
+	background-color: gray;
+	border-style: solid;
+	margin:50px auto 0 auto;
+	padding: 20px;
+	border-radius: 20%;
+	overflow: hidden;
+}
+
+/* interesting changes */
